- MessageTitle_SelectBP_SwitchBuildMethods
- Message_CharacterOptions_OpenCharacterOnBuildMethodChange
- MessageTitle_CharacterOptions_OpenCharacterOnBuildMethodChange
- Message_Options_ConfirmTelemetry
- Message_Options_CloseForms
- Message_Update_CloseForms
- Message_Insufficient_Permissions_Warning_Registry
- Message_MergeIdentical
- MessageTitle_MergeIdentical

Build 214
Application Fixes:
- Added a check for xml files storing invalid characters that prevents the file from being saved or loaded. As test issues have been constrained to issues with the notes, it's assumed that this is mostly coming from ingesting PDF documents. If the issue is found, prompt the user whether they want to load with unsafe settings, as this has a small chance of causing application instability. 
- Added safeguard to notes save method to prevent them from storing said invalid characters. 
- Characters with MAG attributes but who are neither magicians nor adepts of any kind no longer have their MAG attribute disappear in Career mode when the optional rule to have Mystic Adepts use a second MAG attribute is enabled.
- Dark mode's darkened backgrounds have been made slightly lighter (by up to 20%).
- Fixed an issue where some sourcebooks would insert ligature characters into an item's notes that Chummer could not handle and would prevent the character from being saved and/or crash whenever the character was opened.
- When loading a character from a save file, the program now automatically checks if there are any saves in the autosave folder that seem to match the currently loading save file's character and that have a later last write date and time than those of the currently loading save file. If it finds such an autosave, it now prompts the user of whether they want to load the autosave instead, though if they do, the old save file will not be altered until they manually save, just in case they realize that the autosave is not what they want after it has been loaded.