@@ -460,7 +460,7 @@ namespace Chummer
                 Character objCharacter = new Character();
                 Program.MainForm.OpenCharacters.Add(objCharacter);
                 //Timekeeper.Start("load_file");
-                bool blnLoaded = await objCharacter.LoadFromHeroLabFile(strFile, strCharacterId).ConfigureAwait(true);
+                bool blnLoaded = await objCharacter.LoadFromHeroLabFile(strFile, strCharacterId).ConfigureAwait(false);
                 //Timekeeper.Finish("load_file");
                 if (!blnLoaded)
                 {
